kapp/service/resources.yaml
#@ load("@ytt:data", "data")
#@yaml/text-templated-strings
---
kind: Deployment
apiVersion: apps/v1
metadata:  
  name: #@ data.values.service.name +"-app"
  labels:
    service: #@ data.values.service.name    
    k8s-app: #@ data.values.application.name 
    app.kubernetes.io/component: #@ data.values.service.name
    app.kubernetes.io/part-of: #@ data.values.application.name 
spec:
  replicas: #@ data.values.service.replicas
  selector:
    matchLabels:
      service: #@ data.values.service.name      
      k8s-app: #@ data.values.application.name
      app.kubernetes.io/component: #@ data.values.service.name
      app.kubernetes.io/part-of: #@ data.values.application.name 
  template:
    metadata:
      labels:
        service: #@ data.values.service.name        
        k8s-app: #@ data.values.application.name
        app.kubernetes.io/component: #@ data.values.service.name
        app.kubernetes.io/part-of: #@ data.values.application.name 
    spec:
      volumes:
        - name: config-volume
          configMap:
            name:  #@ data.values.service.name + "-config"
            items:            
            - key: pets_config.json
              path: pets_config.json            
      containers:
        - name: #@ data.values.service.name
          image: #@ data.values.service.image
          imagePullPolicy: Always
          ports:
            - name: #@ data.values.service.name+ "-http"
              containerPort: #@ data.values.service.port
          volumeMounts:
            - name: config-volume
              mountPath: /config/
          livenessProbe:
            httpGet:
              port: #@ data.values.service.port
              path: /liveness
            initialDelaySeconds: 10
            periodSeconds: 2
          readinessProbe:
            httpGet:
              port: #@ data.values.service.port
              path: /readiness
            initialDelaySeconds: 10
            periodSeconds: 2
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.service.name +"-service"
  labels:
    service: #@ data.values.service.name    
    k8s-app: #@ data.values.application.name
    app.kubernetes.io/component: #@ data.values.service.name
    app.kubernetes.io/part-of: #@ data.values.application.name 
spec:
  ports:
    - protocol: TCP
      name: #@ data.values.service.name+ "-http"
      port: #@ data.values.service.port
  selector:
    service: #@ data.values.service.name    
    k8s-app: #@ data.values.application.name
    app.kubernetes.io/component: #@ data.values.service.name
    app.kubernetes.io/part-of: #@ data.values.application.name 
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    app.kubernetes.io/component: #@ data.values.service.name
    app.kubernetes.io/part-of: #@ data.values.application.name 
  #annotations:
  #  kubernetes.io/ingress.class: istio
  name: #@ data.values.service.name + "-ingress"
spec:
  rules:
    - host: #@ data.values.service.virtual_host
      http:
        paths:
          - path: #@ "/"+ data.values.service.name
            pathType: Prefix
            backend:
              service:
                name: #@ data.values.service.name +"-service"
                port: 
                  number: #@ data.values.service.port
